--- a/.github/workflows/genrate-ascii.yaml
+++ b/.github/workflows/genrate-ascii.yaml
@@ -9,20 +9,13 @@ jobs:
         - name: Checkout Repo 
           uses: actions/checkout@v4
 
-        - name: Insatll Cowsay
-          run: sudo apt-get install cowsay -y
-
-        - name: Execute cowsay command
-          run: cowsay -f dragon "Hello World" >> sample.txt
-
-        - name: Check file is present or not
-          run: grep -i "Hello" sample.txt
-
-        - name: Read File
-          run: cat sample.txt  
-
-        - name : Least and Read Files
+        - name: list of files
           run: ls -ltra
+
+        - name: Executing Shell Script
+          run: ./script.sh
+
+        
             
             
             
