--- a/.github/workflows/genrate-ascii.yaml
+++ b/.github/workflows/genrate-ascii.yaml
@@ -13,7 +13,10 @@ jobs:
           run: ls -ltra
 
         - name: Executing Shell Script
-          run: ./script.sh
+          run: 
+            chmod +x script.sh
+            .github/workflows/script.sh
+          
 
         
             
