--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -12,9 +12,9 @@ jobs:
         steps: 
         - name: Docker Build, Login, Publish
           run: |
-            echo docker build -t ${{ env.CONTAINER_REGESTIRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
-            echo docker login --username=$DOCKER_USERNAME --password=${{ secrets.DOCKER_PASSWORD }}
-            echo docker push $CONTAINER_REGESTIRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+            echo docker build -t ${{ env.CONTAINER_REGESTIRY }}/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+            echo docker login --username=${{ vars.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+            echo docker push $CONTAINER_REGESTIRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
       
     deploy:
