--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -1,6 +1,9 @@
 name: Secreates in Github Actions
 
-on: push
+on: 
+  schedule:
+    - cron: "*/1 * * * *"
+
 
 env:
     CONTAINER_REGESTIRY: docker.io
