--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -1,8 +1,8 @@
 name: Secreates in Github Actions
 
-on: 
-  schedule:
-    - cron: "*/1 * * * *"
+on: workflow_dispatch
+#   schedule:
+#     - cron: "*/1 * * * *"
 
 
 env:
