--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -27,6 +27,7 @@ jobs:
         - name: Docker Run
           run: |
             echo docker run -d -p 8080:80 $CONTAINER_REGESTIRY/${{ env.CONTAINER_REGESTIRY }}/$IMAGE_NAME:latest
+            sleep 600s
             
 
 
