--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -26,11 +26,12 @@ jobs:
             group: prod-deployment
             cancel-in-progress: true
         runs-on: ubuntu-latest
-        steps: 
+        steps:   
         - name: Docker Run
+          timeout-minutes: 1
           run: |
             echo docker run -d -p 8080:80 $CONTAINER_REGESTIRY/${{ env.CONTAINER_REGESTIRY }}/$IMAGE_NAME:latest
-            sleep 600s
+            sleep 6000s
             
 
 
