--- a/.github/workflows/matrix-config.yaml
+++ b/.github/workflows/matrix-config.yaml
@@ -1,20 +1,41 @@
-name: Matrix Config
+# name: Matrix Config
 
-on: push
+# on: push
+
+# jobs:
+#     deploy-on-ubuntu:
+#         runs-on: ubuntu-latest
+#         steps: 
+#         - name: Echo docker details, Run Image
+#           run: |
+#             docker info
+#             docker run hello-world
+
+#     deploy-on-windows:
+#         runs-on: windows-latest
+#         steps: 
+#         - name: Echo docker details, Run Image
+#           run: |
+#             docker info
+#             docker run hello-world
+
+
+name: Matrix Example
+
+on: [push]
 
 jobs:
-    deploy-on-ubuntu:
-        runs-on: ubuntu-latest
-        steps: 
-        - name: Echo docker details, Run Image
-          run: |
-            docker info
-            docker run hello-world
-
-    deploy-on-windows:
-        runs-on: windows-latest
-        steps: 
-        - name: Echo docker details, Run Image
-          run: |
-            docker info
-            docker run hello-world
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node: [14, 16]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+      - run: npm install
+      - run: npm test
