--- a/.github/workflows/matrix-config.yaml
+++ b/.github/workflows/matrix-config.yaml
@@ -1,41 +1,22 @@
-# name: Matrix Config
+name: Matrix Config
 
-# on: push
-
-# jobs:
-#     deploy-on-ubuntu:
-#         runs-on: ubuntu-latest
-#         steps: 
-#         - name: Echo docker details, Run Image
-#           run: |
-#             docker info
-#             docker run hello-world
-
-#     deploy-on-windows:
-#         runs-on: windows-latest
-#         steps: 
-#         - name: Echo docker details, Run Image
-#           run: |
-#             docker info
-#             docker run hello-world
-
-
-name: Matrix Example
-
-on: [push]
+on: 
+  push:
+  workflow_dispatch:    
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  deploy:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [16, 18]  # Updated Node.js versions
+        os: [ubuntu-latest, ubuntu-22.04, windows-latest]
+        image: [hello-world, alpine]
+    runs-on: ${{ matrix.os }}
+    
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-      - run: npm install
-      - run: npm test
+    - name: Echo Docker details
+      run: |
+        docker info
+
+    - name: Running image on ${{ matrix.os }}
+      run: |
+        docker run ${{ matrix.image }}
